--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,6 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     compileOnly 'com.google.android.wearable:wearable:2.8.1'
 
+    implementation 'com.google.code.gson:gson:2.8.6'
+
 }
